Add support for woff2 if the browser supports it

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,5 +21,6 @@
 
 @font-face {
   font-family: "SuisseIntl";
-  src: url("../../static/SuisseIntl-Regular.woff");
+  src: url("../../static/SuisseIntl-Regular.woff2") format("woff2"),
+    url("../../static/SuisseIntl-Regular.woff") format("woff");
 }
