--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,15 +12,40 @@
  * re-declared. For whatever reason, this was the cause
  * for the text to flash / change font when state was
  * in the main page component.
- *
- * TODO:
- *
- * Add woff2 and possibly ttf options for optimal browser
- * support.
-*/
+ */
 
 @font-face {
   font-family: "SuisseIntl";
   src: url("../../static/SuisseIntl-Regular.woff2") format("woff2"),
     url("../../static/SuisseIntl-Regular.woff") format("woff");
+}
+
+/* All non-dynamic styles have been moved from GlobalStyles to here */
+
+* {
+  box-sizing: border-box;
+  font-family: inherit;
+}
+
+html {
+  font-family: "SuisseIntl";
+  font-size: 20px;
+}
+
+body {
+  margin: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+button {
+  border: none;
+  background: none;
+  font-weight: normal;
+  padding: 10px;
+  cursor: pointer;
+  /* Chrome needs explicit setting of this property */
+  font-size: inherit;
+  /* Think about a11y */
+  outline: none;
 }
