--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,11 +25,24 @@
 * {
   box-sizing: border-box;
   font-family: inherit;
+  font-size: inherit;
 }
 
 html {
   font-family: "SuisseIntl";
   font-size: 20px;
+}
+
+/* 2000 number is a placeholder */
+@media screen and (max-width: 2000px) {
+  html {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 1300px) {
+  html {
+    font-size: 16px;
+  }
 }
 
 body {
