Try and preload font files correctly

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,8 +16,8 @@
 
 @font-face {
   font-family: "SuisseIntl";
-  src: url("../../static/SuisseIntl-Regular.woff2") format("woff2"),
-    url("../../static/SuisseIntl-Regular.woff") format("woff");
+  src: url("../fonts/SuisseIntl-Regular.woff2") format("woff2"),
+    url("../fonts/SuisseIntl-Regular.woff2") format("woff");
   font-display: swap;
 }
 
