Add `user-select: none` to all buttons to try and get rid of "Select All" in firefox mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -67,6 +67,7 @@ button {
   padding: 10px;
   cursor: pointer;
   font-size: inherit; /* Chrome needs explicit setting of this */
+  user-select: none;
 }
 
 /* Disables the focus outline that is only present on Firefox */
