See if setting `user-select: none` for all elements fixing the select all issue

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,6 +22,7 @@
   box-sizing: border-box;
   font-family: inherit;
   font-size: inherit;
+  user-select: none;
 }
 
 html {
@@ -67,11 +68,11 @@ button {
   padding: 10px;
   cursor: pointer;
   font-size: inherit; /* Chrome needs explicit setting of this */
-  user-select: none;
 }
 
 /* Disables the focus outline that is only present on Firefox */
-button::-moz-focus-inner {
+button::-moz-focus-inner,
+a::-moz-focus-inner {
   border: 0;
 }
 
