--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,6 +22,9 @@
   box-sizing: border-box;
   font-family: inherit;
   font-size: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 html {
